refactor(engine): 优化构建层管理器的选择逻辑
- 使用 getFirst() 方法替代 iterator().next() 提升性能
- 移除对 BlockPos 的 null 检查简化计数逻辑
- 在事件库面板中使用 getFirst() 替代 get(0)
- 修复时间轴音频拖拽处理器中的空指针检查
- 添加路径存在性验证避免空指针异常
- 更新注释文档保持准确性